# prostate-cox-gwas-pipeline

./: .gitignore  README.md  pyproject.toml
scripts/: 00_check_keys.py  01_create_base_excel.py  02_profile_dataset.py  03_clean_dataset.py  04_imputation_variable_selection.R  04b_imputation_variable_selecion_Multip_imp.R  05_descriptive_summary.R  06_survival_variables.R  07_univariate_models.R  08_variable_selection.R  09_final_multivariant_models.R
