[project]
name = "prostate-cox-gwas-pipeline"
version = "0.1.0"
description = "Pipeline for preprocessing clinical covariates and preparing Cox-GWAS analyses in prostate cancer."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501", "I001"]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
